# evaluation-exploration

./: .gitignore  README.md  eval.py  pyproject.toml
evaluation/: groundtruth.py
helper/: data_loader.py  state_management.py
sample/data/: raw_q1.json  raw_q2.json
sample/inputs/: data_1.json  prompt.json
sample/prompts/: prompts.json
schema/: data.py  evaluation.py  prompt.py
tests/: test_ground_truth.py  test_text_splitter.py
ui/: app.py
ui/pages/: eval_results.py  input.py
unsupervised/: citation_evaluator.ipynb  pyproject.toml
